--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -1,10 +1,11 @@
 ﻿<metro:MetroWindow     
     xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls" 
-    x:Class="CalculatorPro.MainWindow"
+        x:Class="CalculatorPro.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"      
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:local="clr-namespace:CalculatorPro"
         mc:Ignorable="d"
         Height="501" Width="321.5" MinHeight="501" MinWidth="321.5" WindowStyle="None" ShowTitleBar="False" ShowMaxRestoreButton="False" ShowCloseButton="False" ShowMinButton="False" BorderBrush="Black">
@@ -21,7 +22,9 @@
         <Grid Grid.Row="0" Margin="0,0,-0.4,0.8">
             <Label VerticalAlignment="Center" Content="  计算器"/>
             <DockPanel LastChildFill="False" VerticalAlignment="Top">
-                <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" >×</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15">×
+                                  
+                </Button>
                 <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight">☐</Button>
                 <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" >-</Button>
             </DockPanel>
@@ -29,13 +32,13 @@
         <DockPanel Grid.Row="1" Margin="0,0.2,-0.4,18" Grid.RowSpan="2">
             <Button DockPanel.Dock="Left" Style="{StaticResource btnStandard}" >≡</Button>
             <Label  DockPanel.Dock="Left" Margin="0,0,0,-0.2" Width="240" Style="{StaticResource lblText}">标准</Label>
-            <Button DockPanel.Dock="Right" Style="{StaticResource btnStandard}">◷</Button>
+            <Button DockPanel.Dock="Right" Style="{StaticResource btnStandard}" Click="Button_Click">◷</Button>
         </DockPanel>
         <Border Grid.Row="3" Margin="0,0,-0.4,0.2">
             <TextBox IsReadOnly="True" Background="#e6e6e6" BorderThickness="0"></TextBox>
         </Border>
-        <Grid Grid.Row="3" Margin="0,71,-0.4,0.2" Grid.RowSpan="2">
-            <UniformGrid Rows="1">
+        <Grid Grid.Row="3" Margin="0,71,-0.4,0.2" Grid.RowSpan="2" x:Name="GridMem" >
+            <UniformGrid Rows="1" >
                 <Button  Style="{StaticResource btnMem}">MC</Button>
                 <Button  Style="{StaticResource btnMem}">MR</Button>
                 <Button  Style="{StaticResource btnMem}">M+</Button>
@@ -44,9 +47,8 @@
                 <Button  Style="{StaticResource btnMem}">M▾</Button>
             </UniformGrid>
         </Grid>
-        <Grid Grid.Row="4" Margin="0,31.8,-0.4,0" Grid.RowSpan="2">
+        <Grid Grid.Row="4" Margin="0,31.8,-0.4,0" Grid.RowSpan="2" x:Name="OutGrid">
             <UniformGrid Rows="6" Columns="4">
-
                 <Button Style="{StaticResource btnOther}">%</Button>
                 <Button Style="{StaticResource btnOther}">√</Button>
                 <Button Style="{StaticResource btnOther}" >x²</Button>
@@ -75,4 +77,11 @@
         </Grid>
         <Grid Grid.RowSpan="5" Margin="0,0,-0.4,0.2"></Grid>
     </Grid>
+    <metro:MetroWindow.Flyouts>
+        <metro:FlyoutsControl >
+            <metro:Flyout x:Name="hisFlyout" Position="Bottom" Visibility="Collapsed" TitleVisibility="Collapsed" CloseButtonVisibility="Collapsed" IsPinned="False" >
+                <local:HisFlyout></local:HisFlyout>
+            </metro:Flyout>
+        </metro:FlyoutsControl>
+    </metro:MetroWindow.Flyouts>
 </metro:MetroWindow>
