--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -19,18 +19,19 @@
             <RowDefinition Height="293*"/>
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="0,0,-0.4,0.8">
+        <Grid Grid.Row="0" Margin="0,0,-0.4,0.8" MouseMove="TitleMove_MouseMove">
             <Label VerticalAlignment="Center" Content="  计算器"/>
             <DockPanel LastChildFill="False" VerticalAlignment="Top">
-                <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" >×</Button>
-                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight">☐</Button>
-                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" >-</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" Click="Close_Click">×</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight" Click="Max_Click" x:Name="Max">☐</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" Click="Min_Click">-</Button>
             </DockPanel>
         </Grid>
         <DockPanel Grid.Row="1" Margin="0,0.2,-0.4,18" Grid.RowSpan="2">
             <Button DockPanel.Dock="Left" Style="{StaticResource btnNav}" >≡</Button>
-            <Label  DockPanel.Dock="Left" Margin="0,0,0,-0.2" Width="240" Style="{StaticResource lblText}">标准</Label>
-            <Button DockPanel.Dock="Right" Style="{StaticResource btnHis}" >◷</Button>
+            <Button DockPanel.Dock="Right" Style="{StaticResource btnHis}" Click="HisDisplay_Click">◷</Button>
+            <Label  DockPanel.Dock="Left" Style="{StaticResource lblText}">标准</Label>
+            
         </DockPanel>
         <Border Grid.Row="2">
             <TextBox Style="{StaticResource txtSmallBox}" Text="{Binding DisPlayText}"></TextBox>
@@ -45,7 +46,7 @@
                 <Button  Style="{StaticResource btnMem}">M+</Button>
                 <Button  Style="{StaticResource btnMem}">M-</Button>
                 <Button  Style="{StaticResource btnMem}">MS</Button>
-                <Button  Style="{StaticResource btnMem}">M▾</Button>
+                <Button  Style="{StaticResource btnMem}"  Click="MemDisplay_Click">M▾</Button>
             </UniformGrid>
         </Grid>
         <Grid Grid.Row="4" Margin="0,31.8,-0.4,0" Grid.RowSpan="2" x:Name="OutGrid">
@@ -72,7 +73,7 @@
                 <Button Style="{StaticResource btnChar}" Command="{Binding AddCommand}">+</Button>
                 <Button Style="{StaticResource btnOther}" FontSize="25">±</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding ZeroCommand}">0</Button>
-                <Button Style="{StaticResource btnOther}">.</Button>
+                <Button Style="{StaticResource btnOther}" Command="{Binding PointCommand}">.</Button>
                 <Button Style="{StaticResource btnChar}">=</Button>
             </UniformGrid>
         </Grid>
@@ -82,6 +83,9 @@
         <metro:FlyoutsControl >
             <metro:Flyout x:Name="hisFlyout" Position="Bottom" Visibility="Collapsed" TitleVisibility="Collapsed" CloseButtonVisibility="Collapsed" IsPinned="False" >
                 <local:HisFlyout></local:HisFlyout>
+            </metro:Flyout>
+            <metro:Flyout x:Name="memFlyout" Position="Bottom" Visibility="Collapsed" TitleVisibility="Collapsed" CloseButtonVisibility="Collapsed" IsPinned="False" >
+                <local:MemFlyout></local:MemFlyout>
             </metro:Flyout>
         </metro:FlyoutsControl>
     </metro:MetroWindow.Flyouts>
