--- a/CalculatorPro/Resources/Style/StyleDictionary.xaml
+++ b/CalculatorPro/Resources/Style/StyleDictionary.xaml
@@ -239,5 +239,13 @@
         <Setter Property="Foreground" Value="#6d6d6d"></Setter>
         <Setter Property="FontFamily" Value="Yu Gothic UI Semilight"></Setter>
     </Style>
-        
+    <!--扩展历史界面样式-->
+    <Style x:Key="btnHisAndMem" TargetType="Button">
+        <Setter Property="FontSize" Value="16"></Setter>
+        <Setter Property="FontFamily" Value="微软雅黑"></Setter>
+        <Setter Property="FontWeight" Value="Black"></Setter>
+        <Setter Property="Height" Value="32.6"></Setter>
+        <Setter Property="BorderThickness" Value="0,0,0,3.5"></Setter>
+        <Setter Property="Background" Value="#e6e6e6"></Setter>
+    </Style>
 </ResourceDictionary>
