--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -10,7 +10,7 @@
         mc:Ignorable="d"
         x:Name="Window"
         Height="501" Width="321.5" MinHeight="501" MinWidth="321.5" WindowStyle="None" ShowTitleBar="False" ShowMaxRestoreButton="False" ShowCloseButton="False" ShowMinButton="False" BorderBrush="Black">
-    <Grid Background="#e6e6e6" Name="AllGrid">
+    <Grid  Background="#e6e6e6" Name="AllGrid" >
         <Grid.RowDefinitions>
             <RowDefinition Height="36.675"/>
             <RowDefinition Height="42*"/>
@@ -27,14 +27,15 @@
         <Grid Grid.Row="0" MouseMove="TitleMove_MouseMove" Name="TitleBar">
         <DockPanel LastChildFill="False" VerticalAlignment="Top" >
                 <Label DockPanel.Dock="Left"  VerticalAlignment="Center" Content="  计算器"  MouseMove="TitleMove_MouseMove" Width="176"/>
-            <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" Click="Close_Click">×</Button>
-            <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight" Click="Max_Click" x:Name="Max">☐</Button>
-            <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" Click="Min_Click">-</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" Click="Close_Click" VerticalContentAlignment="Center">×</Button>
+            <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight" Click="Max_Click" x:Name="Max" VerticalContentAlignment="Center" >☐</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" Click="Min_Click" VerticalContentAlignment="Center">-</Button>
         </DockPanel>
         </Grid>
         <DockPanel Grid.Row="1"  Name="Two_Row">
             <Button DockPanel.Dock="Left" Style="{StaticResource btnNav}" >≡</Button>
-            <Button DockPanel.Dock="Right" Style="{StaticResource btnHis}" Name="btnHis" Click="HisDisplay_Click">◷</Button>
+            <Button DockPanel.Dock="Right" Style="{StaticResource btnHis}" Name="btnHis" Click="HisDisplay_Click">
+                <Image Source="Resources\Img\ImgClock.png"></Image></Button>
             <Label  DockPanel.Dock="Left" Style="{StaticResource lblText}">标准</Label>
         </DockPanel>
         <Border Grid.Row="2">
@@ -45,23 +46,23 @@
         </Border>
         <Grid Grid.Row="4" x:Name="GridMem" >
             <UniformGrid Rows="1" Columns="6" Name="uniformMem">
-                <Button  Style="{StaticResource btnMem}">MC</Button>
-                <Button  Style="{StaticResource btnMem}">MR</Button>
+                <Button  Style="{StaticResource btnMem}" IsEnabled="False" Opacity="0.2">MC</Button>
+                <Button  Style="{StaticResource btnMem}" IsEnabled="False" Opacity="0.2">MR</Button>
                 <Button  Style="{StaticResource btnMem}">M+</Button>
                 <Button  Style="{StaticResource btnMem}">M-</Button>
                 <Button  Style="{StaticResource btnMem}">MS</Button>
-                <Button  Style="{StaticResource btnMem}" Name="btnM" Click="MemDisplay_Click">M▾</Button>
+                <Button  Style="{StaticResource btnMem}" Name="btnM" Click="MemDisplay_Click" IsEnabled="False" Opacity="0.2">M▾</Button>
             </UniformGrid>
         </Grid>
         <Grid Grid.Row="5"  x:Name="OutGrid">
             <UniformGrid Rows="6" Columns="4">
                 <Button Style="{StaticResource btnOther}">%</Button>
-                <Button Style="{StaticResource btnOther}">√</Button>
+                <Button Style="{StaticResource btnOther}" FontFamily="Segoe UI Symbol" >√</Button>
                 <Button Style="{StaticResource btnOther}" >x²</Button>
                 <Button Style="{StaticResource btnOther}">⅟x</Button>
                 <Button Style="{StaticResource btnOther}">CE</Button>
                 <Button Style="{StaticResource btnOther}">C</Button>
-                <Button Style="{StaticResource btnOther}">⌫</Button>
+                <Button Style="{StaticResource btnOther}" FontFamily="Wingdings">Õ</Button>
                 <Button Style="{StaticResource btnChar}" Command="{Binding DivideCommand}">÷</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding SevenCommand}">7</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding EightCommand}">8</Button>
@@ -75,9 +76,9 @@
                 <Button Style="{StaticResource btnNum}" Command="{Binding TwoCommand}">2</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding ThreeCommand}">3</Button>
                 <Button Style="{StaticResource btnChar}" Command="{Binding AddCommand}">+</Button>
-                <Button Style="{StaticResource btnOther}" FontSize="25">±</Button>
+                <Button Style="{StaticResource btnOther}" FontSize="22" FontWeight="Light">±</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding ZeroCommand}">0</Button>
-                <Button Style="{StaticResource btnOther}" Command="{Binding PointCommand}">.</Button>
+                <Button Style="{StaticResource btnOther}" Command="{Binding PointCommand}" FontWeight="DemiBold">.</Button>
                 <Button Style="{StaticResource btnChar}">=</Button>
             </UniformGrid>
         </Grid>
