--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -25,32 +25,33 @@
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="0" MouseMove="TitleMove_MouseMove" Name="TitleBar">
-        <DockPanel LastChildFill="False" VerticalAlignment="Top" >
+            <DockPanel LastChildFill="False" VerticalAlignment="Top" >
                 <Label DockPanel.Dock="Left"  VerticalAlignment="Center" Content="  计算器"  MouseMove="TitleMove_MouseMove" Width="176"/>
                 <Button  DockPanel.Dock="Right" Style="{StaticResource btnClose}" FontSize="15" Click="Close_Click" VerticalContentAlignment="Center">×</Button>
-            <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight" Click="Max_Click" x:Name="Max" VerticalContentAlignment="Center" >☐</Button>
+                <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="13.5" FontWeight="ExtraLight" Click="Max_Click" x:Name="Max" VerticalContentAlignment="Center" >☐</Button>
                 <Button  DockPanel.Dock="Right" Style="{StaticResource btnMinAndMax}" FontSize="20" Click="Min_Click" VerticalContentAlignment="Center">-</Button>
-        </DockPanel>
+            </DockPanel>
         </Grid>
         <DockPanel Grid.Row="1"  Name="Two_Row">
             <Button DockPanel.Dock="Left" Style="{StaticResource btnNav}" >≡</Button>
             <Button DockPanel.Dock="Right" Style="{StaticResource btnHis}" Name="btnHis" Click="HisDisplay_Click">
-                <Image Source="Resources\Img\ImgClock.png"></Image></Button>
+                <Image Source="Resources\Img\ImgClock.png"></Image>
+            </Button>
             <Label  DockPanel.Dock="Left" Style="{StaticResource lblText}">标准</Label>
         </DockPanel>
         <Border Grid.Row="2">
             <TextBox Style="{StaticResource txtSmallBox}" Text="{Binding DisPlayText}"></TextBox>
         </Border>
         <Border Grid.Row="3">
-            <TextBox  Style="{StaticResource txtBigBox}" Text="{Binding DisPlayBigText}" ></TextBox>
+            <TextBox  Style="{StaticResource txtBigBox}" Text="{Binding DisPlayBigText}" TextChanged="TextBox_TextChanged" Name="txtBox" Margin="5,0,5,0"></TextBox>
         </Border>
         <Grid Grid.Row="4" x:Name="GridMem" >
             <UniformGrid Rows="1" Columns="6" Name="uniformMem">
-                <Button  Style="{StaticResource btnMem}" IsEnabled="False" Opacity="0.2" Command="{Binding Btn_mc}">MC</Button>
-                <Button  Style="{StaticResource btnMem}" IsEnabled="False" Opacity="0.2"  Command="{Binding Btn_mr}">MR</Button>
+                <Button  Style="{StaticResource btnMem}" Name="btnMc" IsEnabled="False" Opacity="0.2" Command="{Binding Btn_mc}">MC</Button>
+                <Button  Style="{StaticResource btnMem}" Name="btnMr"  IsEnabled="False" Opacity="0.2"  Command="{Binding Btn_mr}">MR</Button>
                 <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_plus}">M+</Button>
                 <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_minus}" >M-</Button>
-                <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_ms}" >MS</Button>
+                <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_ms}" Click="MS_Click">MS</Button>
                 <Button  Style="{StaticResource btnMem}" Name="btnM" Click="MemDisplay_Click" IsEnabled="False" Opacity="0.2">M▾</Button>
             </UniformGrid>
         </Grid>
@@ -62,7 +63,6 @@
                 <Button Style="{StaticResource btnOther}" Command="{Binding ReciprocalCommand}">⅟x</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding ClearPreCommand}">CE</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding ClearAllCommand}">C</Button>
-                <Button Style="{StaticResource btnOther}" Visibility="Collapsed" Name="add" Command="{Binding CubeCommand}">x³</Button>
                 <Button Style="{StaticResource btnOther}" FontFamily="Wingdings" Command="{Binding DelCommand}">Õ</Button>
                 <Button Style="{StaticResource btnChar}" Command="{Binding DivideCommand}">÷</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding Num7Command}">7</Button>
@@ -80,8 +80,7 @@
                 <Button Style="{StaticResource btnOther}" FontSize="22" FontWeight="Light" Command="{Binding InverseCommand}">±</Button>
                 <Button Style="{StaticResource btnNum}" Command="{Binding Num0Command}">0</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding DotCommand}" FontWeight="DemiBold">.</Button>
-                <Button Style="{StaticResource btnChar}" Command="{Binding EqualsCommand}" >=</Button>
-                
+                <Button Style="{StaticResource btnChar}" Command="{Binding EqualsCommand}" Click="Equals_Click">=</Button>
             </UniformGrid>
         </Grid>
     </Grid>
