--- a/CalculatorPro/Resources/Style/StyleDictionary.xaml
+++ b/CalculatorPro/Resources/Style/StyleDictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CalculatorPro.Resources.Style">
-                               
+
     <!-- 最小最大化按钮样式 -->
     <Style x:Key="btnMinAndMax" TargetType="Button">
         <Setter Property="Background" Value="#e6e6e6"></Setter>
@@ -80,7 +80,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
+
     </Style>
     <!--数字按钮样式-->
     <Style x:Key="btnNum" TargetType="Button">
@@ -218,7 +218,7 @@
         <Setter Property="FontSize" Value="20"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
     </Style>
-    
+
     <!--文本框样式-->
     <Style x:Key="txtBigBox" TargetType="TextBox">
         <Setter Property="Background" Value="#e6e6e6"></Setter>
@@ -259,7 +259,7 @@
                             <Setter Property="Background" Value="#e6e6e6"></Setter>
                             <Setter Property="Opacity" Value="0.8"></Setter>
                         </Trigger>
-                        
+
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -340,5 +340,30 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="MemControl" TargetType="Button">
+        <Setter Property="Width" Value="36.675"></Setter>
+        <Setter Property="Height" Value="28.5"></Setter>
+        <Setter Property="BorderThickness" Value="0"></Setter>
+        <Setter Property="Margin" Value="0,0,3,0"></Setter>
+        <Setter Property="Visibility" Value="Hidden"></Setter>
+    </Style>
+    <Style x:Key="MemGrid" TargetType="Grid">
+        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#d2d2d2"></Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="txtMem" TargetType="TextBox">
+        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#d2d2d2"></Setter>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
