--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -58,7 +58,7 @@
         <Grid Grid.Row="5"  x:Name="OutGrid">
             <UniformGrid Rows="6" Columns="4" Name="uniformNum" Margin="3,0,3,0">
                 <Button Style="{StaticResource btnOther}" Command="{Binding PercentOneCommand}" >%</Button>
-                <Button Style="{StaticResource btnOther}" FontFamily="Segoe UI Symbol" >√</Button>
+                <Button Style="{StaticResource btnOther}"  Command="{Binding RadicalCommand}" FontFamily="Segoe UI Symbol" >√</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding SquareCommand}">x²</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding ReciprocalCommand}">⅟x</Button>
                 <Button Style="{StaticResource btnOther}" Command="{Binding ClearPreCommand}">CE</Button>
