--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<metro:MetroWindow     
+﻿<metro:MetroWindow xmlns:XamlHost="clr-namespace:Microsoft.Toolkit.Wpf.UI.XamlHost;assembly=Microsoft.Toolkit.Wpf.UI.XamlHost"      
     xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls" 
         x:Class="CalculatorPro.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -12,7 +12,8 @@
         Icon="Resources\Img\Calculator.ico"
         
         Height="501" Width="321.5" MinHeight="501" MinWidth="321.5" WindowStyle="None" ShowTitleBar="False" ShowMaxRestoreButton="False" ShowCloseButton="False" ShowMinButton="False" BorderBrush="Black">
-    <Grid  Background="#e6e6e6" Name="AllGrid" >
+        
+        <Grid  Background="#e6e6e6" Name="AllGrid" >
         <Grid.RowDefinitions>
             <RowDefinition Height="36.675"/>
             <RowDefinition Height="42*"/>
@@ -26,6 +27,7 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
+        
         <Grid Grid.Row="0" MouseMove="TitleMove_MouseMove" Name="TitleBar">
             <DockPanel LastChildFill="False" VerticalAlignment="Top" >
                 <Label DockPanel.Dock="Left"  VerticalAlignment="Center" Content="  计算器"  MouseMove="TitleMove_MouseMove" Width="176"/>
@@ -85,8 +87,8 @@
                 <Button Style="{StaticResource btnChar}" Command="{Binding EqualsCommand}" Click="Equals_Click">=</Button>
             </UniformGrid>
         </Grid>
-        
     </Grid>
+    
     <metro:MetroWindow.Flyouts>
         <metro:FlyoutsControl >
             <metro:Flyout x:Name="hisFlyout" Position="Bottom" Visibility="Collapsed" TitleVisibility="Collapsed" CloseButtonVisibility="Collapsed" IsPinned="False" >
