--- a/CalculatorPro/Resources/Style/MemAndHisDictionary.xaml
+++ b/CalculatorPro/Resources/Style/MemAndHisDictionary.xaml
@@ -26,12 +26,34 @@
                             <Setter TargetName="extensionMplus" Property="Visibility" Value="Visible"/>
                             <Setter TargetName="extensionMminus" Property="Visibility" Value="Visible"/>
                         </Trigger>
-                       
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-   
+    <Style x:Key="HistoryListItemStyle" TargetType="ListBoxItem">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="border" Background="Transparent" Margin="-5,0,0,0">
+                        <StackPanel x:Name="q" Orientation="Vertical" HorizontalAlignment="Right" Margin="-5,0,0,5">
+                            <TextBlock TextWrapping="Wrap" Foreground="Black" x:Name="te" Text="{Binding}" Margin="0,0,10,0" FontFamily="Yu Gothic UI" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" TextAlignment="Right"  Width="{Binding ElementName=lstHis,Path=ActualWidth}">
+                            </TextBlock>
+                            <TextBlock TextWrapping="Wrap" Name="txtSmall" Foreground="Black" FontSize="20" HorizontalAlignment="Right" TextAlignment="Right"></TextBlock>
+                            <TextBlock TextWrapping="Wrap" Name="txtBig" Foreground="Black"  FontSize="20" HorizontalAlignment="Right" TextAlignment="Right"></TextBlock>
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers >
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="q" Property="Background" Value="#CFCFCF"></Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
