--- a/CalculatorPro/MainWindow.xaml
+++ b/CalculatorPro/MainWindow.xaml
@@ -1,19 +1,45 @@
-﻿<metro:MetroWindow xmlns:XamlHost="clr-namespace:Microsoft.Toolkit.Wpf.UI.XamlHost;assembly=Microsoft.Toolkit.Wpf.UI.XamlHost"      
-    xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls" 
+﻿<metro:MetroWindow 
+        xmlns:XamlHost="clr-namespace:Microsoft.Toolkit.Wpf.UI.XamlHost;assembly=Microsoft.Toolkit.Wpf.UI.XamlHost"      
+        xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls" 
         x:Class="CalculatorPro.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"      
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:local="clr-namespace:CalculatorPro"
         mc:Ignorable="d"
         x:Name="Window"
         Icon="Resources\Img\Calculator.ico"
-        
+
         Height="501" Width="321.5" MinHeight="501" MinWidth="321.5" WindowStyle="None" ShowTitleBar="False" ShowMaxRestoreButton="False" ShowCloseButton="False" ShowMinButton="False" BorderBrush="Black">
-        
-        <Grid  Background="#e6e6e6" Name="AllGrid" >
+        <metro:MetroWindow.InputBindings>
+            <KeyBinding Key="D0" Command="{Binding Num0Command}"></KeyBinding>
+            <KeyBinding Key="D1" Command="{Binding Num1Command}"></KeyBinding>
+            <KeyBinding Key="D2" Command="{Binding Num2Command}"></KeyBinding>
+            <KeyBinding Key="D3" Command="{Binding Num3Command}"></KeyBinding>
+            <KeyBinding Key="D4" Command="{Binding Num4Command}"></KeyBinding>
+            <KeyBinding Key="D5" Command="{Binding Num5Command}"></KeyBinding>
+            <KeyBinding Key="D6" Command="{Binding Num6Command}"></KeyBinding>
+            <KeyBinding Key="D7" Command="{Binding Num7Command}"></KeyBinding>
+            <KeyBinding Key="D8" Command="{Binding Num8Command}"></KeyBinding>
+            <KeyBinding Key="D9" Command="{Binding Num9Command}"></KeyBinding>
+            <KeyBinding Key="NumPad0" Command="{Binding Num0Command}"></KeyBinding>
+            <KeyBinding Key="NumPad1" Command="{Binding Num1Command}"></KeyBinding>
+            <KeyBinding Key="NumPad2" Command="{Binding Num2Command}"></KeyBinding>
+            <KeyBinding Key="NumPad3" Command="{Binding Num3Command}"></KeyBinding>
+            <KeyBinding Key="NumPad4" Command="{Binding Num4Command}"></KeyBinding>
+            <KeyBinding Key="NumPad5" Command="{Binding Num5Command}"></KeyBinding>
+            <KeyBinding Key="NumPad6" Command="{Binding Num6Command}"></KeyBinding>
+            <KeyBinding Key="NumPad7" Command="{Binding Num7Command}"></KeyBinding>
+            <KeyBinding Key="NumPad8" Command="{Binding Num8Command}"></KeyBinding>
+            <KeyBinding Key="NumPad9" Command="{Binding Num9Command}"></KeyBinding>
+            <KeyBinding Key="Add" Command="{Binding AddCommand}"></KeyBinding>
+            <KeyBinding Key="Subtract" Command="{Binding SubtractCommand}"></KeyBinding>
+            <KeyBinding Key="Multiply" Command="{Binding MultiplyCommand}"></KeyBinding>
+            <KeyBinding Key="Divide" Command="{Binding DivideCommand}"></KeyBinding>
+            <KeyBinding Modifiers="Shift" Key="D2" Command="{Binding RadicalCommand}"></KeyBinding>
+    </metro:MetroWindow.InputBindings>
+    <Grid  Background="#e6e6e6" Name="AllGrid" >
         <Grid.RowDefinitions>
             <RowDefinition Height="36.675"/>
             <RowDefinition Height="42*"/>
@@ -51,7 +77,7 @@
         </Border>
         <Grid Grid.Row="4" x:Name="GridMem" >
             <UniformGrid Rows="1" Columns="6" Name="uniformMem">
-                <Button  Style="{StaticResource btnMem}" Name="btnMc" IsEnabled="False" Opacity="0.2" Command="{Binding Btn_mc}">MC</Button>
+                <Button  Style="{StaticResource btnMem}" Name="btnMc" IsEnabled="False" Opacity="0.2" Command="{Binding Btn_mc}" Click="BtnMc_Click">MC</Button>
                 <Button  Style="{StaticResource btnMem}" Name="btnMr"  IsEnabled="False" Opacity="0.2"  Command="{Binding Btn_mr}">MR</Button>
                 <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_plus}">M+</Button>
                 <Button  Style="{StaticResource btnMem}" Command="{Binding Btn_minus}" >M-</Button>
@@ -86,7 +112,9 @@
                 <Button Style="{StaticResource btnOther}" Command="{Binding DotCommand}" FontWeight="DemiBold">.</Button>
                 <Button Style="{StaticResource btnChar}" Command="{Binding EqualsCommand}" Click="Equals_Click">=</Button>
             </UniformGrid>
+           
         </Grid>
+        
     </Grid>
     
     <metro:MetroWindow.Flyouts>
